...
                                  Scaffold.of(context).openDrawer();
                                }
                              },
                              style: TextButton.styleFrom(
                                backgroundColor: Theme.of(context).scaffoldBackgroundColor.withValues(alpha: 0.7)
                              ),
                              child: const Text("Menu"),
                            ),
                          ]))
                      )
                  )
              ),

...
        ),
      ),
    );
  }

  IconData _getChartIcon(String chartType) {
    if (chartType.contains("Sectional")) return MdiIcons.mapOutline;
    if (chartType.contains("IFR Low")) return MdiIcons.airplaneLanding;
    if (chartType.contains("IFR High")) return MdiIcons.airplane;
    if (chartType.contains("IFR Area")) return MdiIcons.mapMarkerRadius;
    if (chartType.contains("Helicopter")) return MdiIcons.helicopter;
    if (chartType.contains("TAC")) return MdiIcons.cityVariantOutline;
    if (chartType.contains("Flyway")) return MdiIcons.roadVariant;
...
