...
                        isScrollControlled: true,
                        builder: (BuildContext context) {
                          return _makeContent();
                        },
                      ).then((value) => setState(() {})); // this is important so if modal changes plan then we update it here
                    },
                    child: const Text("Actions"),),
                  Padding(padding: const EdgeInsets.all(5), child:SizedBox(width: Constants.screenWidth(context) / 10, child: TextFormField(
                      keyboardType: TextInputType.numberWithOptions(signed: true, decimal: true),
                      onChanged: (value) {
                        double? pValue = double.tryParse(value);
                        Storage().settings.setTas(pValue ?? Storage().settings.getTas());
                      },
...
